--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 https://www.cnblogs.com/Wu-Shi/p/5410069.html
-http://acm.hdu.edu.cn/showproblem.php?pid=1505
 http://poj.org/problem?id=1003
+Ê÷×´Êý×éÏê½â£ºhttps://www.cnblogs.com/xenny/p/9739600.html
+http://acm.hdu.edu.cn/showproblem.php?pid=1069
