--- a/todo.txt
+++ b/todo.txt
@@ -4,3 +4,4 @@ http://poj.org/problem?id=1003
 生成函数(母函数)——目前最全的讲解：https://blog.csdn.net/qq_41357771/article/details/83449481
 http://acm.hdu.edu.cn/showproblem.php?pid=1069
 2844、2845都是两次使用动规
+#define IOS ios_base::sync_with_stdio(0); cin.tie(0);
