--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,4 @@ http://poj.org/problem?id=1003
 http://acm.hdu.edu.cn/showproblem.php?pid=1069
 2844、2845都是两次使用动规
 #define IOS ios_base::sync_with_stdio(0); cin.tie(0);
+1025、1257都是最长上升子序列
