--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,9 @@
 HDOJ 动态规划总结：https://www.cnblogs.com/Wu-Shi/p/5410069.html （已做完）
+线段树经典类型归纳：https://blog.csdn.net/u011466175/article/details/38294513
+线段树分类总结：https://blog.csdn.net/u013656184/article/details/47393541
+
+
+
 http://poj.org/problem?id=1003
 树状数组详解：https://www.cnblogs.com/xenny/p/9739600.html
 生成函数(母函数)——目前最全的讲解：https://blog.csdn.net/qq_41357771/article/details/83449481
