--- a/todo.txt
+++ b/todo.txt
@@ -6,9 +6,15 @@ HDOJ 动态规划总结：https://www.cnblogs.com/Wu-Shi/p/5410069.html （已做完）
 
 http://poj.org/problem?id=1003
 树状数组详解：https://www.cnblogs.com/xenny/p/9739600.html
+线段树与树状数组的对比应用：https://www.cnblogs.com/--lr/p/9345779.html
+线段树与树状数组的区别：https://blog.csdn.net/honghuidan/article/details/77527808
+http://acm.hdu.edu.cn/showproblem.php?pid=1394 这个题还能用树状数组来解
 生成函数(母函数)——目前最全的讲解：https://blog.csdn.net/qq_41357771/article/details/83449481
 http://acm.hdu.edu.cn/showproblem.php?pid=1069
 2844、2845都是两次使用动规
 #define IOS ios_base::sync_with_stdio(0); cin.tie(0) 尽管关闭了cin的同步，也还是慢，有些题会超时。
 1025、1257都是最长上升子序列
 并查集详解：https://blog.csdn.net/qq_41593380/article/details/81146850
+
+https://blog.csdn.net/li1615882553/article/details/79703364   https://nanti.jisuanke.com/t/392
+
