--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 HDOJ 动态规划总结：https://www.cnblogs.com/Wu-Shi/p/5410069.html （已做完）
-线段树经典类型归纳：https://blog.csdn.net/u011466175/article/details/38294513
+线段树经典类型归纳：https://blog.csdn.net/u011466175/article/details/38294513   每个都非常经典！
 线段树经典题目（一定要做完）：https://blog.csdn.net/yrhsilence/article/details/5793699
 线段树分类总结：https://blog.csdn.net/u013656184/article/details/47393541
 
@@ -24,4 +24,3 @@ http://acm.hdu.edu.cn/showproblem.php?pid=3265
 http://acm.hdu.edu.cn/showproblem.php?pid=5023
 
 
-2795 待测试
