--- a/todo.txt
+++ b/todo.txt
@@ -29,9 +29,9 @@ http://acm.hdu.edu.cn/showproblem.php?pid=5023
 http://poj.org/problem?id=3667
 http://acm.hdu.edu.cn/showproblem.php?pid=1540
 http://poj.org/problem?id=2892
-http://acm.hdu.edu.cn/showproblem.php?pid=2871
+http://acm.hdu.edu.cn/showproblem.php?pid=2871  这是我自己照着别人的思路实现的，把这个代码吃透，这里有非常多细节上的注释。
 
-
+2871待测试
 
 
 
